--- a/microservice1/pom.xml
+++ b/microservice1/pom.xml
@@ -20,6 +20,16 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>4.1.2</version>
+            <!-- <executions>
+                <execution>
+					<groupId>com.google.code.findbugs</groupId>
+					<artifactId>jsr305</artifactId>
+                </execution>
+                <execution>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+                </execution>
+            </executions> -->
 		</dependency>
 	</dependencies>
 	<build>
