--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -5,13 +5,11 @@
 	<parent>
 		<groupId>com.chong</groupId>
 		<artifactId>cloud-native</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
-	<groupId>com.chong</groupId>
-	<artifactId>eureka-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka-server</name>
-	<description>Demo project for eureka-server</description>
+ 
+	<artifactId>eureka-server</artifactId> 
+  
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -19,7 +17,17 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-			<version>4.1.2</version>
+		</dependency> 
+
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+  
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
@@ -30,5 +38,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
