--- a/micro-service1/src/main/resources/application.yml
+++ b/micro-service1/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: microservice-example
+    name: microservice-example1
   datasource:
     url: jdbc:oracle:thin:@//localhost:1521/xe
     username: SYSTEM
