--- a/micro-service2/src/main/resources/application.yml
+++ b/micro-service2/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: microservice-finder
+    name: microservice-example2
   datasource:
     url: jdbc:oracle:thin:@//localhost:1521/xe
     username: SYSTEM
