--- a/microservice-gateway/pom.xml
+++ b/microservice-gateway/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0.0</version>
 	</parent>
  
-	<artifactId>eureka-server</artifactId> 
+	<artifactId>microservice-gateway</artifactId> 
   
 	<properties>
 		<java.version>21</java.version>
@@ -16,9 +16,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-		</dependency> 
-
+			<artifactId>spring-cloud-starter-gateway</artifactId> 
+		</dependency>
 		<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-actuator</artifactId>
