--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
     <modules>
-        <module>eureka-server</module>
+        <module>microservice-gateway</module>
         <module>micro-service1</module> 
         <module>micro-service2</module> 
     </modules>
