--- a/microservice-infrastructure/pom.xml
+++ b/microservice-infrastructure/pom.xml
@@ -7,15 +7,19 @@
 		<artifactId>cloud-native</artifactId>
 		<version>1.0.0</version>
 	</parent>
- 
-	<artifactId>microservice-infrastructure</artifactId> 
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+	</dependencies>
+	<artifactId>microservice-infrastructure</artifactId>
 
 	<properties>
 		<java.version>21</java.version>
 	</properties>
-	<dependencies>
-  
-	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
