--- a/microservice-register-center/pom.xml
+++ b/microservice-register-center/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>register-center</artifactId>
+	<artifactId>microservice-register-center</artifactId>
 
 	<properties>
 		<java.version>21</java.version>
