--- a/microservice-infrastructure/pom.xml
+++ b/microservice-infrastructure/pom.xml
@@ -13,7 +13,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<artifactId>microservice-infrastructure</artifactId>
 
