--- a/microservice-student-service/pom.xml
+++ b/microservice-student-service/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0.0</version>
 	</parent>
  
-	<artifactId>micro-service1</artifactId> 
+	<artifactId>microservice-student-service</artifactId> 
 
 	<properties>
 		<java.version>21</java.version>
