--- a/microservice-student-service/src/main/resources/application.yml
+++ b/microservice-student-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: microservice-example2
+    name: microservice-student-service
   datasource:
     url: jdbc:oracle:thin:@//localhost:1521/xe
     username: SYSTEM
@@ -11,7 +11,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
  
 server:
-  port: 8081
+  port: 8080
  
 management:
   endpoints:
