--- a/microservice-infrastructure/src/main/resources/application.yml
+++ b/microservice-infrastructure/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     username: SYSTEM
     password: peng414607
     driver-class-name: oracle.jdbc.OracleDriver
-    
+  jpa:
+    hibernate:
+      ddl-auto: update
 mybatis:
   mapper-locations: classpath:mapper/*.xml
  
