--- a/microservice-class-manager/pom.xml
+++ b/microservice-class-manager/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>cloud-native</artifactId>
 		<version>1.0.0</version>
 	</parent>
- 
+
 	<artifactId>microservice-class-manager</artifactId>
 
 	<properties>
@@ -15,6 +15,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -25,8 +30,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>com.chong</groupId>
+			<artifactId>microservice-infrastructure</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<build>
