--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -2,6 +2,8 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 spring:
+  main:
+    web-application-type: reactive
   freemarker:
     prefer-file-system-access: false
   application:
@@ -14,66 +16,6 @@ spring:
     password: peng414607
     driver-class-name: oracle.jdbc.OracleDriver
 
-management:
-  endpoints:
-    web:
-      base-path: /actuator
-      exposure:
-        include: "*"
-
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-  server:
-    enableSelfPreservation: false
-  instance:
-    lease-renewal-interval-in-seconds: 0
----
-
 server:
-  port: 8761
+  port: 8080
 
-spring:
-  config:
-    activate:
-      on-profile: cluster1
-eureka:
-  instance:
-    hostname: peer1.com
-  client:
-    serviceUrl:
-      defaultZone: http://peer2.com:8762/eureka/,http://peer3.com:8763/eureka/
-
----
-
-server:
-  port: 8762
-
-spring:
-  config:
-    activate:
-      on-profile: cluster2
-
-eureka:
-  instance:
-    hostname: peer2.com
-  client:
-    serviceUrl:
-      defaultZone: http://peer1.com:8761/eureka/,http://peer3.com:8763/eureka/
----
-
-server:
-  port: 8763
-
-spring:
-  config:
-    activate:
-      on-profile: cluster3
-
-eureka:
-  instance:
-    hostname: peer3.com
-  client:
-    serviceUrl:
-      defaultZone: http://peer1.com:8761/eureka/,http://peer2.com:8762/eureka/
